Minor fixes to overflow/scroll behaviour

--- a/src/styles.css
+++ b/src/styles.css
@@ -91,9 +91,15 @@ div {
 	float: left;
 	width: 8vw;
 	display: flex;
+	flex-shrink: 0;
 	flex-direction: column;
 	justify-content: start;
 	align-items: stretch;
+	overflow-y: scroll;
+}
+
+.sidebar::-webkit-scrollbar {
+	display: none;
 }
 
 .sidebar, .note-tabs {
@@ -116,19 +122,16 @@ div {
 	flex-basis: var(--tab-height);
 	background-color: var(--c-background-alt);
 	padding: var(--spacing);
+	padding-left: 1vw; /* Need to make sure it won't be too close to the edge of the screen */
+	display: block;
+	position: relative;
+	user-select: none;
 }
 
 .tab-label:hover {
 	background-color: var(--c-background);
 	cursor: pointer;
 }
-
-.tab-label {
-	padding-left: 1vw; /* Need to make sure it won't be too close to the edge of the screen */
-	display: block;
-	position: relative;
-}
-
 
 .tab-input:checked + .tab-label {
 	cursor: default;
@@ -157,6 +160,15 @@ div {
 
 #daily-note-tab .material-symbols {
 	font-size: 200%;
+}
+
+#add-note-tab {
+	padding-left: 1.5vh;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	gap: var(--spacing);
 }
 
 /* MIDDLE PANEL */
@@ -285,13 +297,15 @@ div {
 }
 
 .right-panel {
-	width: 40vw;
+	min-width: 0px;
 	background-color: var(--c-background-light);
 	border: var(--border-thickness) solid var(--c-dim-alt);
 	flex-grow: 1;
+	flex-shrink: 1;
 }
 
 .big-note {
+	min-width: 0px;
 	width: 100%;
 	height: 100%;
 	border: var(--border-thickness) solid var(--c-background-alt);
